@@ -1,5 +1,12 @@
 2016-11-28  Pedro Alves  <pedro@palves.net>
 
+	* src/GdbServer.cpp (GdbServer::hideBreakpoints)
+	(GdbServer::unhideBreakpoints): Change return type to void.
+	* src/GdbServer.h (GdbServer::hideBreakpoints)
+	(GdbServer::unhideBreakpoints): Ditto.
+
+2016-11-28  Pedro Alves  <pedro@palves.net>
+
 	* e-src/GdbServer.cpp (GdbServer::rspAttach)
 	(GdbServer::rspSetThread): Remove unused locals.
 
